[package]
name = "lightbox"
version = "0.1.0"
authors = ["Kinnon McAlister <kinnonmcalister@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
ctrlc = "3.1.7"
thread-priority = "0.2.0"
env_logger = "0.8.3"
figment = { version = "0.10", features = ["toml"] }
const_format = "0.2"
serde = { version = "1.0", features = ["derive"] }

# LED
blinkt = "0.5"
microfft = { version = "0.4", default-features = false, features = ["maxn-256"]}
average = "0.11"
num-complex = "0.4"
tokio = "1.5"

# Spotify
librespot = { git = "https://github.com/librespot-org/librespot" }

rodio = { version = "0.13", default-features = false}
cpal = "0.13"

[profile.dev]
opt-level = 3
# codegen-units = 1
# lto = true
